<resources>
    <string name="app_name">Paying Guest</string>
    <string name="signin">Sign In</string>
    <string name="signup">sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign In Here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_user_sign_up_here">New user? Sign Up Here.</string>
    <string name="remember_me">Remember me</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
